# cmake-ios-matel-cpp

./: AppDelegate.mm  AppViewController.mm  CMakeLists.txt  README.md  define.hpp  main.cpp  main.mm
iOS/: CMakeLists.txt
macOS/: CMakeLists.txt
metal_cpp_framework/: CMakeLists.txt  RENDER_API.h  RENDER_FRAMEWORK_API.h  render.cpp  render.hpp
metal_cpp_framework/metal_cpp/: CMakeLists.txt
metal_cpp_framework/metal_cpp/SingleHeader/: metal.cpp
metal_cpp_framework/metal_cpp/SingleHeader/include/: Metal.hpp
